--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.icon{
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    color:#5243C2;
+}
+.features-data{
+    list-style: none;
+}
+.special-background{
+    background: #3F87F5;
+    border-radius: 10px;
+    color: white;
+}
+.special-button{
+    padding-right: 60px;
+    padding-left: 60px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    background-color: white;
+    color: #3F87F5;
+    border-radius: 30px;
+    font-weight: 800;
+    text-decoration: none;
+}
+.normal-button{
+    padding-right: 60px;
+    padding-left: 60px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    background-color: #fff5fc;
+    color:#3F87F5;
+    border-radius: 30px;
+    font-weight: 700;
+    text-decoration: none;
+}
