--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@ body{
     list-style: none;
 }
 .special-background{
-    background: #3F87F5;
-    border-radius: 10px;
+    background-color: #3F87F5;
+    border-radius:50px;
     color: white;
+    box-shadow: 0 2px 30px -8px #0066ff;
 }
 .special-button{
-    padding-right: 60px;
-    padding-left: 60px;
+    padding-right: 50px;
+    padding-left: 50px;
     padding-top: 10px;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -29,8 +30,8 @@ body{
     text-decoration: none;
 }
 .normal-button{
-    padding-right: 60px;
-    padding-left: 60px;
+    padding-right: 50px;
+    padding-left: 50px;
     padding-top: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -40,4 +41,7 @@ body{
     border-radius: 30px;
     font-weight: 700;
     text-decoration: none;
+}
+.badge-position{
+    transform: translateX(140px) translateY(-30px);
 }
