--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
     list-style: none;
 }
 .special-background{
-    background-color: #3F87F5;
-    border-radius:50px;
+    background-image: linear-gradient(#2e0481 ,#0066ff );
+    border-radius:30px;
     color: white;
     box-shadow: 0 2px 30px -8px #0066ff;
 }
