--- a/style.css
+++ b/style.css
@@ -45,3 +45,7 @@ body{
 .badge-position{
     transform: translateX(140px) translateY(-30px);
 }
+.fa-caret-down{
+    font-size: 20px;
+    transform: translateX(140px) ;
+}
