--- a/style.css
+++ b/style.css
@@ -45,7 +45,10 @@ body{
 .badge-position{
     transform: translateX(140px) translateY(-30px);
 }
-.fa-caret-down{
-    font-size: 20px;
-    transform: translateX(140px) ;
+.footer-image{
+    height: 40px;
+    width: 135px;
+}
+.bottom-bg{
+    background-color: #97dddf;
 }
